--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -13,10 +13,10 @@
     </div>
         {% for post in posts %}
     <div>
-        <p>Opublikowano: {{ post.published_date() }}</p>
-        <p>Autor: {{post.author() }}</p>
+        <p>Opublikowano: {{ post.published_date }}</p>
+        <p>Autor: {{post.author }}</p>
     </div>
-    {% endfor %}
+        {% endfor %}
 
 </body>
 </html>
