--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,7 +5,8 @@
             <p>Opublikowano: {{ post.published_date }}</p>
             <h1><a href="http://www.instagram.com/mateuszchmielarek"> Autor: {{post.author }}</a></h1>
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-            <h2>{{ post.text }}</h2>
+                <img src="{{ post.image.url }}" alt="Zdjecie" width="100px">
+            <em>{{ post.text|linebreaksbr }}</em>
         </div>
             {% endfor %}
     {% endblock %}
