--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Pierwszy Blog</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
+<form enctype="multipart/form-data"></form>
+
 <body>
 <div class="page-header">
-  <h1><a href="/"> MÓJ PIERWSZY BLOG</a></h1>
+    {% if user.is_authenticated %}
+    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+    {% endif %}
+    <h1><a href="/"> MÓJ PIERWSZY BLOG</a></h1>
 </div>
 <div class="content container">
   <div class="row">
